FEAT: Add javascript sample

--- a/index.html
+++ b/index.html
@@ -7,6 +7,14 @@
 </head>
 <body>
 <h1><a href="index.html">WEB</a></h1>
+<input onclick="
+    document.querySelector('body').style.backgroundColor= 'black';
+    document.querySelector('body').style.color= 'white';
+" type="button" value="night">
+<input onclick="
+    document.querySelector('body').style.backgroundColor= 'white';
+    document.querySelector('body').style.color= 'black';
+" type="button" value="day">
 <div id="grid">
     <ol>
         <li><a href="1.html">HTML</a></li>
