--- a/index.html
+++ b/index.html
@@ -4,33 +4,56 @@
     <title>WEB1 - Welcome</title>
     <meta charset="utf-8">
     <link href="style.css" rel="stylesheet">
+    <script>
+        function nightDayHandler(self) {
+            let target = document.querySelector('body');
+            if (self.value == 'night') {
+                target.style.backgroundColor = 'black';
+                target.style.color = 'white';
+                self.value = 'day'
+
+                let alist = document.querySelectorAll('a');
+                let i = 0;
+                while (i < alist.length) {
+                    alist[i].style.color = 'powderblue';
+                    i = i + 1;
+                }
+            } else {
+                target.style.backgroundColor = 'white';
+                target.style.color = 'black';
+                self.value = 'night'
+
+                let alist = document.querySelectorAll('a');
+                let i = 0;
+                while (i < alist.length) {
+                    alist[i].style.color = 'blue';
+                    i = i + 1;
+                }
+            }
+        }
+    </script>
 </head>
 <body>
-<h1><a href="index.html">WEB</a></h1>
-<input onclick="
-    document.querySelector('body').style.backgroundColor= 'black';
-    document.querySelector('body').style.color= 'white';
-" type="button" value="night">
-<input onclick="
-    document.querySelector('body').style.backgroundColor= 'white';
-    document.querySelector('body').style.color= 'black';
-" type="button" value="day">
-<div id="grid">
-    <ol>
-        <li><a href="1.html">HTML</a></li>
-        <li><a href="2.html">CSS</a></li>
-        <li><a href="3.html">JavaScript</a></li>
-    </ol>
-    <div id="article">
-        <h2>WEB</h2>
-        <p>The World Wide Web (abbreviated WWW or the Web) is an information space where documents and other web
-            resources are identified by Uniform Resource Locators (URLs), interlinked by hypertext links, and can be
-            accessed via the Internet.[1] English scientist Tim Berners-Lee invented the World Wide Web in 1989. He
-            wrote the first web browser computer program in 1990 while employed at CERN in Switzerland.[2][3] The Web
-            browser was released outside of CERN in 1991, first to other research institutions starting in January 1991
-            and to the general public on the Internet in August 1991.
-        </p>
+    <h1><a href="index.html">WEB</a></h1>
+    <input onclick="nightDayHandler(this)" type="button" value="night">
+    <div id="grid">
+        <ol>
+            <li><a href="1.html">HTML</a></li>
+            <li><a href="2.html">CSS</a></li>
+            <li><a href="3.html">JavaScript</a></li>
+        </ol>
+        <div id="article">
+            <h2>WEB</h2>
+            <p>The World Wide Web (abbreviated WWW or the Web) is an information space where documents and other web
+                resources are identified by Uniform Resource Locators (URLs), interlinked by hypertext links, and can be
+                accessed via the Internet.[1] English scientist Tim Berners-Lee invented the World Wide Web in 1989. He
+                wrote the first web browser computer program in 1990 while employed at CERN in Switzerland.[2][3] The
+                Web
+                browser was released outside of CERN in 1991, first to other research institutions starting in January
+                1991
+                and to the general public on the Internet in August 1991.
+            </p>
+        </div>
     </div>
-</div>
 </body>
 </html>
